// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`censys ipv4 basic test 1`] = `
Array [
  Object {
    "asn": "7684",
    "cloudHosted": false,
    "country": "JP",
    "createdAt": null,
    "fromRootDomain": null,
    "id": null,
    "ip": "153.126.148.60",
    "name": "first_file_testdomain1",
    "organization": null,
    "reverseName": "first_file_testdomain1",
    "screenshot": null,
    "services": Array [],
    "ssl": null,
    "syncedAt": null,
    "updatedAt": null,
  },
  Object {
    "asn": "16509",
    "cloudHosted": false,
    "country": "SG",
    "createdAt": null,
    "fromRootDomain": null,
    "id": null,
    "ip": "52.74.149.117",
    "name": "first_file_testdomain10",
    "organization": null,
    "reverseName": "first_file_testdomain10",
    "screenshot": null,
    "services": Array [],
    "ssl": null,
    "syncedAt": null,
    "updatedAt": null,
  },
  Object {
    "asn": "48347",
    "cloudHosted": false,
    "country": "RU",
    "createdAt": null,
    "fromRootDomain": null,
    "id": null,
    "ip": "31.134.10.156",
    "name": "first_file_testdomain11",
    "organization": null,
    "reverseName": "first_file_testdomain11",
    "screenshot": null,
    "services": Array [],
    "ssl": null,
    "syncedAt": null,
    "updatedAt": null,
  },
  Object {
    "asn": "9121",
    "cloudHosted": false,
    "country": "TR",
    "createdAt": null,
    "fromRootDomain": null,
    "id": null,
    "ip": "1.1.1.1",
    "name": "first_file_testdomain12",
    "organization": null,
    "reverseName": "first_file_testdomain12",
    "screenshot": null,
    "services": Array [],
    "ssl": null,
    "syncedAt": null,
    "updatedAt": null,
  },
  Object {
    "asn": "48347",
    "cloudHosted": false,
    "country": "RU",
    "createdAt": null,
    "fromRootDomain": null,
    "id": null,
    "ip": "31.134.10.156",
    "name": "first_file_testdomain2",
    "organization": null,
    "reverseName": "first_file_testdomain2",
    "screenshot": null,
    "services": Array [],
    "ssl": null,
    "syncedAt": null,
    "updatedAt": null,
  },
  Object {
    "asn": "7684",
    "cloudHosted": false,
    "country": "JP",
    "createdAt": null,
    "fromRootDomain": null,
    "id": null,
    "ip": "153.126.148.60",
    "name": "first_file_testdomain3",
    "organization": null,
    "reverseName": "first_file_testdomain3",
    "screenshot": null,
    "services": Array [],
    "ssl": null,
    "syncedAt": null,
    "updatedAt": null,
  },
  Object {
    "asn": "8473",
    "cloudHosted": false,
    "country": "SE",
    "createdAt": null,
    "fromRootDomain": null,
    "id": null,
    "ip": "85.24.146.152",
    "name": "first_file_testdomain4",
    "organization": null,
    "reverseName": "first_file_testdomain4",
    "screenshot": null,
    "services": Array [],
    "ssl": null,
    "syncedAt": null,
    "updatedAt": null,
  },
  Object {
    "asn": "63949",
    "cloudHosted": false,
    "country": "US",
    "createdAt": null,
    "fromRootDomain": null,
    "id": null,
    "ip": "45.79.207.117",
    "name": "first_file_testdomain5",
    "organization": null,
    "reverseName": "first_file_testdomain5",
    "screenshot": null,
    "services": Array [],
    "ssl": null,
    "syncedAt": null,
    "updatedAt": null,
  },
  Object {
    "asn": "26484",
    "cloudHosted": false,
    "country": "US",
    "createdAt": null,
    "fromRootDomain": null,
    "id": null,
    "ip": "156.249.159.119",
    "name": "first_file_testdomain6",
    "organization": null,
    "reverseName": "first_file_testdomain6",
    "screenshot": null,
    "services": Array [],
    "ssl": null,
    "syncedAt": null,
    "updatedAt": null,
  },
  Object {
    "asn": null,
    "cloudHosted": false,
    "country": null,
    "createdAt": null,
    "fromRootDomain": null,
    "id": null,
    "ip": "221.10.15.220",
    "name": "first_file_testdomain7",
    "organization": null,
    "reverseName": "first_file_testdomain7",
    "screenshot": null,
    "services": Array [],
    "ssl": null,
    "syncedAt": null,
    "updatedAt": null,
  },
  Object {
    "asn": "2856",
    "cloudHosted": false,
    "country": "GB",
    "createdAt": null,
    "fromRootDomain": null,
    "id": null,
    "ip": "81.141.166.145",
    "name": "first_file_testdomain8",
    "organization": null,
    "reverseName": "first_file_testdomain8",
    "screenshot": null,
    "services": Array [],
    "ssl": null,
    "syncedAt": null,
    "updatedAt": null,
  },
  Object {
    "asn": "6327",
    "cloudHosted": false,
    "country": "CA",
    "createdAt": null,
    "fromRootDomain": null,
    "id": null,
    "ip": "24.65.82.187",
    "name": "first_file_testdomain9",
    "organization": null,
    "reverseName": "first_file_testdomain9",
    "screenshot": null,
    "services": Array [],
    "ssl": null,
    "syncedAt": null,
    "updatedAt": null,
  },
]
`;

exports[`censys ipv4 http failure should retry 1`] = `
Array [
  Object {
    "asn": null,
    "cloudHosted": false,
    "country": null,
    "createdAt": null,
    "fromRootDomain": null,
    "id": null,
    "ip": "153.126.148.60",
    "name": "first_file_testdomain1",
    "organization": null,
    "reverseName": "first_file_testdomain1",
    "screenshot": null,
    "services": Array [],
    "ssl": null,
    "syncedAt": null,
    "updatedAt": null,
  },
  Object {
    "asn": null,
    "cloudHosted": false,
    "country": null,
    "createdAt": null,
    "fromRootDomain": null,
    "id": null,
    "ip": "52.74.149.117",
    "name": "first_file_testdomain10",
    "organization": null,
    "reverseName": "first_file_testdomain10",
    "screenshot": null,
    "services": Array [],
    "ssl": null,
    "syncedAt": null,
    "updatedAt": null,
  },
  Object {
    "asn": null,
    "cloudHosted": false,
    "country": null,
    "createdAt": null,
    "fromRootDomain": null,
    "id": null,
    "ip": "31.134.10.156",
    "name": "first_file_testdomain11",
    "organization": null,
    "reverseName": "first_file_testdomain11",
    "screenshot": null,
    "services": Array [],
    "ssl": null,
    "syncedAt": null,
    "updatedAt": null,
  },
  Object {
    "asn": null,
    "cloudHosted": false,
    "country": null,
    "createdAt": null,
    "fromRootDomain": null,
    "id": null,
    "ip": "1.1.1.1",
    "name": "first_file_testdomain12",
    "organization": null,
    "reverseName": "first_file_testdomain12",
    "screenshot": null,
    "services": Array [],
    "ssl": null,
    "syncedAt": null,
    "updatedAt": null,
  },
  Object {
    "asn": null,
    "cloudHosted": false,
    "country": null,
    "createdAt": null,
    "fromRootDomain": null,
    "id": null,
    "ip": "31.134.10.156",
    "name": "first_file_testdomain2",
    "organization": null,
    "reverseName": "first_file_testdomain2",
    "screenshot": null,
    "services": Array [],
    "ssl": null,
    "syncedAt": null,
    "updatedAt": null,
  },
  Object {
    "asn": null,
    "cloudHosted": false,
    "country": null,
    "createdAt": null,
    "fromRootDomain": null,
    "id": null,
    "ip": "153.126.148.60",
    "name": "first_file_testdomain3",
    "organization": null,
    "reverseName": "first_file_testdomain3",
    "screenshot": null,
    "services": Array [],
    "ssl": null,
    "syncedAt": null,
    "updatedAt": null,
  },
  Object {
    "asn": null,
    "cloudHosted": false,
    "country": null,
    "createdAt": null,
    "fromRootDomain": null,
    "id": null,
    "ip": "85.24.146.152",
    "name": "first_file_testdomain4",
    "organization": null,
    "reverseName": "first_file_testdomain4",
    "screenshot": null,
    "services": Array [],
    "ssl": null,
    "syncedAt": null,
    "updatedAt": null,
  },
  Object {
    "asn": null,
    "cloudHosted": false,
    "country": null,
    "createdAt": null,
    "fromRootDomain": null,
    "id": null,
    "ip": "45.79.207.117",
    "name": "first_file_testdomain5",
    "organization": null,
    "reverseName": "first_file_testdomain5",
    "screenshot": null,
    "services": Array [],
    "ssl": null,
    "syncedAt": null,
    "updatedAt": null,
  },
  Object {
    "asn": null,
    "cloudHosted": false,
    "country": null,
    "createdAt": null,
    "fromRootDomain": null,
    "id": null,
    "ip": "156.249.159.119",
    "name": "first_file_testdomain6",
    "organization": null,
    "reverseName": "first_file_testdomain6",
    "screenshot": null,
    "services": Array [],
    "ssl": null,
    "syncedAt": null,
    "updatedAt": null,
  },
  Object {
    "asn": null,
    "cloudHosted": false,
    "country": null,
    "createdAt": null,
    "fromRootDomain": null,
    "id": null,
    "ip": "221.10.15.220",
    "name": "first_file_testdomain7",
    "organization": null,
    "reverseName": "first_file_testdomain7",
    "screenshot": null,
    "services": Array [],
    "ssl": null,
    "syncedAt": null,
    "updatedAt": null,
  },
  Object {
    "asn": null,
    "cloudHosted": false,
    "country": null,
    "createdAt": null,
    "fromRootDomain": null,
    "id": null,
    "ip": "81.141.166.145",
    "name": "first_file_testdomain8",
    "organization": null,
    "reverseName": "first_file_testdomain8",
    "screenshot": null,
    "services": Array [],
    "ssl": null,
    "syncedAt": null,
    "updatedAt": null,
  },
  Object {
    "asn": null,
    "cloudHosted": false,
    "country": null,
    "createdAt": null,
    "fromRootDomain": null,
    "id": null,
    "ip": "24.65.82.187",
    "name": "first_file_testdomain9",
    "organization": null,
    "reverseName": "first_file_testdomain9",
    "screenshot": null,
    "services": Array [],
    "ssl": null,
    "syncedAt": null,
    "updatedAt": null,
  },
]
`;

exports[`censys ipv4 repeated http failures should throw an error 1`] = `
Array [
  Object {
    "asn": null,
    "cloudHosted": false,
    "country": null,
    "createdAt": null,
    "fromRootDomain": null,
    "id": null,
    "ip": "153.126.148.60",
    "name": "first_file_testdomain1",
    "organization": null,
    "reverseName": "first_file_testdomain1",
    "screenshot": null,
    "services": Array [],
    "ssl": null,
    "syncedAt": null,
    "updatedAt": null,
  },
  Object {
    "asn": null,
    "cloudHosted": false,
    "country": null,
    "createdAt": null,
    "fromRootDomain": null,
    "id": null,
    "ip": "52.74.149.117",
    "name": "first_file_testdomain10",
    "organization": null,
    "reverseName": "first_file_testdomain10",
    "screenshot": null,
    "services": Array [],
    "ssl": null,
    "syncedAt": null,
    "updatedAt": null,
  },
  Object {
    "asn": null,
    "cloudHosted": false,
    "country": null,
    "createdAt": null,
    "fromRootDomain": null,
    "id": null,
    "ip": "31.134.10.156",
    "name": "first_file_testdomain11",
    "organization": null,
    "reverseName": "first_file_testdomain11",
    "screenshot": null,
    "services": Array [],
    "ssl": null,
    "syncedAt": null,
    "updatedAt": null,
  },
  Object {
    "asn": null,
    "cloudHosted": false,
    "country": null,
    "createdAt": null,
    "fromRootDomain": null,
    "id": null,
    "ip": "1.1.1.1",
    "name": "first_file_testdomain12",
    "organization": null,
    "reverseName": "first_file_testdomain12",
    "screenshot": null,
    "services": Array [],
    "ssl": null,
    "syncedAt": null,
    "updatedAt": null,
  },
  Object {
    "asn": null,
    "cloudHosted": false,
    "country": null,
    "createdAt": null,
    "fromRootDomain": null,
    "id": null,
    "ip": "31.134.10.156",
    "name": "first_file_testdomain2",
    "organization": null,
    "reverseName": "first_file_testdomain2",
    "screenshot": null,
    "services": Array [],
    "ssl": null,
    "syncedAt": null,
    "updatedAt": null,
  },
  Object {
    "asn": null,
    "cloudHosted": false,
    "country": null,
    "createdAt": null,
    "fromRootDomain": null,
    "id": null,
    "ip": "153.126.148.60",
    "name": "first_file_testdomain3",
    "organization": null,
    "reverseName": "first_file_testdomain3",
    "screenshot": null,
    "services": Array [],
    "ssl": null,
    "syncedAt": null,
    "updatedAt": null,
  },
  Object {
    "asn": null,
    "cloudHosted": false,
    "country": null,
    "createdAt": null,
    "fromRootDomain": null,
    "id": null,
    "ip": "85.24.146.152",
    "name": "first_file_testdomain4",
    "organization": null,
    "reverseName": "first_file_testdomain4",
    "screenshot": null,
    "services": Array [],
    "ssl": null,
    "syncedAt": null,
    "updatedAt": null,
  },
  Object {
    "asn": null,
    "cloudHosted": false,
    "country": null,
    "createdAt": null,
    "fromRootDomain": null,
    "id": null,
    "ip": "45.79.207.117",
    "name": "first_file_testdomain5",
    "organization": null,
    "reverseName": "first_file_testdomain5",
    "screenshot": null,
    "services": Array [],
    "ssl": null,
    "syncedAt": null,
    "updatedAt": null,
  },
  Object {
    "asn": null,
    "cloudHosted": false,
    "country": null,
    "createdAt": null,
    "fromRootDomain": null,
    "id": null,
    "ip": "156.249.159.119",
    "name": "first_file_testdomain6",
    "organization": null,
    "reverseName": "first_file_testdomain6",
    "screenshot": null,
    "services": Array [],
    "ssl": null,
    "syncedAt": null,
    "updatedAt": null,
  },
  Object {
    "asn": null,
    "cloudHosted": false,
    "country": null,
    "createdAt": null,
    "fromRootDomain": null,
    "id": null,
    "ip": "221.10.15.220",
    "name": "first_file_testdomain7",
    "organization": null,
    "reverseName": "first_file_testdomain7",
    "screenshot": null,
    "services": Array [],
    "ssl": null,
    "syncedAt": null,
    "updatedAt": null,
  },
  Object {
    "asn": null,
    "cloudHosted": false,
    "country": null,
    "createdAt": null,
    "fromRootDomain": null,
    "id": null,
    "ip": "81.141.166.145",
    "name": "first_file_testdomain8",
    "organization": null,
    "reverseName": "first_file_testdomain8",
    "screenshot": null,
    "services": Array [],
    "ssl": null,
    "syncedAt": null,
    "updatedAt": null,
  },
  Object {
    "asn": null,
    "cloudHosted": false,
    "country": null,
    "createdAt": null,
    "fromRootDomain": null,
    "id": null,
    "ip": "24.65.82.187",
    "name": "first_file_testdomain9",
    "organization": null,
    "reverseName": "first_file_testdomain9",
    "screenshot": null,
    "services": Array [],
    "ssl": null,
    "syncedAt": null,
    "updatedAt": null,
  },
]
`;
